# First_Agents

./: .env  README.md  main.py  pyproject.toml  requirements.txt
notebook/: 1_first_agents.ipynb  2_messages.ipynb  3_streaming.ipynb  4_tools.ipynb  5_tools_mcp.ipynb  6_memory.ipynb  7_structuredOutput.ipynb  8_dynamic.ipynb  9_hitl.ipynb  documents_loading.ipynb
